# carlapclprocessing

./: .gitignore  CMakeLists.txt  Doxyfile  GodScriptForRenaming  README.md  resources_ego0
include/: Application.h  Camera.h  CarlaImuParser.h  Drawable.h  Ego.h  IWindowEventListener.h  ImageDrawable.h  ImguiManager.h  ImuParser.h  IntWindowEventListener.h  PointCloud.h  Pointcloud.h  PointcloudHandler.h  Renderer.h  SensorData.h  Server.h  ShaderLoader.h  TransformParser.h  Window.h  WindowEventPublisher.h  WindowHandler.h  helpers.h
include/Parsers/: SteeringParser.h
include/Singletons/: Server.h
recording/: .gitkeep
resources/: 000819.ply  000819.ply.txt  000831.ply  000831.ply.txt  000831.ply_all.txt  000841.ply  000841.ply.txt  000841.ply_all.txt  000851.ply  000851.ply.txt  000851.ply_all.txt  000861.ply  000861.ply.txt  000861.ply_all.txt  000871.ply  000871.ply.txt  000871.ply_all.txt  000881.ply  000881.ply.txt  000881.ply_all.txt  000891.ply  000891.ply.txt  000891.ply_all.txt  000901.ply  000901.ply.txt  000901.ply_all.txt  000911.ply  000911.ply.txt  000911.ply_all.txt  000921.ply  000921.ply.txt  000921.ply_all.txt  000931.ply  000931.ply.txt  000931.ply_all.txt  000941.ply  000941.ply.txt  000941.ply_all.txt  000951.ply  000951.ply.txt  (+410 more)
shaders/: KNearest_fragent.shader  KNearest_fragment.shader  carlaRGB_fragment.shader  carlaRGB_vertex.shader  fragmentShader.shader  vertexShader.shader
src/: Application.cpp  Camera.cpp  CarlaImuParser.cpp  Drawable.cpp  Ego.cpp  ImageDrawable.cpp  ImguiManager.cpp  ImuParser.cpp  IntWindowEventListener.cpp  PointCloud.cpp  Pointcloud.cpp  PointcloudHandler.cpp  Renderer.cpp  SensorData.cpp  Server.cpp  SteeringParser.cpp  TransformParser.cpp  Window.cpp  WindowEventPublisher.cpp  WindowHandler.cpp  fragmentShader.shader  helpers.cpp  main.cpp  vertexShader.shader
src/Parsers/: ImuParser.cpp  SteeringParser.cpp  TransformParser.cpp
src/Singletons/: ImguiManager.cpp  Server.cpp  WindowEventPublisher.cpp
